--- a/CareerExplorer.Web/appsettings.json
+++ b/CareerExplorer.Web/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CareerExplorer;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CareerExplorer;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "AppDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=CareerExplorer.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
