--- a/CareerExplorer.Web/CareerExplorer.Web.csproj
+++ b/CareerExplorer.Web/CareerExplorer.Web.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="AspNet.Security.OAuth.LinkedIn" Version="7.0.2" />
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+    <PackageReference Include="Hangfire" Version="1.7.34" />
     <PackageReference Include="IdentityServer4" Version="4.1.2" />
     <PackageReference Include="IdentityServer4.AspNetIdentity" Version="4.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="7.0.5" />
