notification about meeting by email

--- a/CareerExplorer.Web/appsettings.json
+++ b/CareerExplorer.Web/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CareerExplorer;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "Email": {
+    "Sender": "careerexplrer20@gmail.com",
+    "Password": "xcgqxmjfsxkxavlx"
   }
 }
