key vault setup

--- a/CareerExplorer.Web/appsettings.json
+++ b/CareerExplorer.Web/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CareerExplorer;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "KeyVaultConfig": {
+    "KVUrl": "https://careerexplorerkeyvault.vault.azure.net/",
+    "ClientId": "53a65d4a-dc43-4fdb-8b8b-2b3b357227c1",
+    "ClientSecretId": ""
   }
 }
