--- a/CareerExplorer.Web/Properties/launchSettings.json
+++ b/CareerExplorer.Web/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -14,7 +14,9 @@
       "launchBrowser": true,
       "applicationUrl": "http://localhost:5206",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "VaultUri": "https://careerexplorerkeyvault.vault.azure.net/",
+        "AZURE_USERNAME": "timcenkovaleria79@gmail.com"
       }
     },
     "https": {
@@ -23,14 +25,18 @@
       "launchBrowser": true,
       "applicationUrl": "https://localhost:7001;http://localhost:5206",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "VaultUri": "https://careerexplorerkeyvault.vault.azure.net/",
+        "AZURE_USERNAME": "timcenkovaleria79@gmail.com"
       }
     },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "VaultUri": "https://careerexplorerkeyvault.vault.azure.net/",
+        "AZURE_USERNAME": "timcenkovaleria79@gmail.com"
       }
     }
   }
